// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caes Teaser renders correctly 1`] = `
<div
  className="case-teaser"
>
  <div
    className="container container--case"
  >
    <div
      className="row"
    >
      <div
        className="case-teaser__col--img col-xs-12 col-lg-7 last-lg"
      >
        <figure>
          <GatsbyLink
            to="http://example.com"
          >
            <img
              alt="Example"
              className="case-image"
              src="example.jpg"
            />
          </GatsbyLink>
        </figure>
      </div>
      <div
        className="case-teaser__col--body col-xs-12 col-lg-5 first-lg"
      >
        <div
          className="case-teaser__text"
        >
          <h2>
            <small>
              Subline
            </small>
            Title
          </h2>
          <div
            className="case-teaser__body"
          >
            <p>
              Example Content
            </p>
          </div>
          <div
            className="case-teaser__actions"
          >
            <Button
              hasBorder={false}
              isPrimary={true}
              isWhite={false}
              text="Case anschauen"
              url="http://example.com"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Caes Teaser renders correctly with «All Projects» Button 1`] = `
<div
  className="case-teaser"
>
  <div
    className="container container--case"
  >
    <div
      className="row"
    >
      <div
        className="case-teaser__col--img col-xs-12 col-lg-7 last-lg"
      >
        <figure>
          <GatsbyLink
            to="http://example.com"
          >
            <img
              alt="Example"
              className="case-image"
              src="example.jpg"
            />
          </GatsbyLink>
        </figure>
      </div>
      <div
        className="case-teaser__col--body col-xs-12 col-lg-5 first-lg"
      >
        <div
          className="case-teaser__text"
        >
          <h2>
            <small>
              Subline
            </small>
            Title
          </h2>
          <div
            className="case-teaser__body"
          >
            <p>
              Example Content
            </p>
          </div>
          <div
            className="case-teaser__actions"
          >
            <Button
              hasBorder={false}
              isPrimary={true}
              isWhite={false}
              text="Case anschauen"
              url="http://example.com"
            />
            <Button
              hasBorder={false}
              isPrimary={false}
              isWhite={false}
              text="alle unsere Arbeiten"
              url="/projekte"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
